--- a/Payment.API/appsettings.json
+++ b/Payment.API/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "RabbitMQ": "amqps://gubkcbxj:GU91HoVClx1f1ih4M6chJdBg8-FuSj7u@sparrow.rmq.cloudamqp.com/gubkcbxj"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
