--- a/SagaStateMachineWorkerService/appsettings.json
+++ b/SagaStateMachineWorkerService/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "SqlConnection": "Database connection string...",
+    "RabbitMQ": "amqps://gubkcbxj:GU91HoVClx1f1ih4M6chJdBg8-FuSj7u@sparrow.rmq.cloudamqp.com/gubkcbxj"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
