Connection string settings update 1

--- a/Order.API/appsettings.json
+++ b/Order.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SqlConnection": "Database connection string...",
+    "SqlConnection": "Data Source=DESKTOP-83EN9LJ\\SQLEXPRESS;Initial Catalog=MicroservicesDesignPattern;Integrated Security=True",
     "RabbitMQ": "amqps://gubkcbxj:GU91HoVClx1f1ih4M6chJdBg8-FuSj7u@sparrow.rmq.cloudamqp.com/gubkcbxj"
   },
   "Logging": {
