Orchestration Pattern Test Ver-2

--- a/SagaStateMachineWorkerService/appsettings.json
+++ b/SagaStateMachineWorkerService/appsettings.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=DESKTOP-83EN9LJ\\SQLEXPRESS;Initial Catalog=MicroservicesDesignPattern;Integrated Security=True",
+    "SqlConnection": "Data Source=DESKTOP-83EN9LJ\\SQLEXPRESS;Initial Catalog=OrderDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "RabbitMQ": "amqps://gubkcbxj:GU91HoVClx1f1ih4M6chJdBg8-FuSj7u@sparrow.rmq.cloudamqp.com/gubkcbxj"
   },
   "Logging": {
