--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -11,6 +11,7 @@
     <None Remove="Settings\" />
     <None Remove="Interfaces\" />
     <None Remove="Concrete\" />
+    <None Remove="MassTransit" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Events\" />
@@ -18,5 +19,8 @@
     <Folder Include="Settings\" />
     <Folder Include="Abstract\" />
     <Folder Include="Concrete\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MassTransit" Version="7.1.2" />
   </ItemGroup>
 </Project>
